--- a/angular.json
+++ b/angular.json
@@ -1,6 +1,125 @@
 {
   "version": 1,
   "projects": {
+    "flolo-page-admin": {
+      "projectType": "application",
+      "root": "apps/flolo-page-admin",
+      "sourceRoot": "apps/flolo-page-admin/src",
+      "prefix": "dbl-dev",
+      "architect": {
+        "build": {
+          "builder": "@angular-devkit/build-angular:browser",
+          "outputs": ["{options.outputPath}"],
+          "options": {
+            "outputPath": "dist/apps/flolo-page-admin",
+            "index": "apps/flolo-page-admin/src/index.html",
+            "main": "apps/flolo-page-admin/src/main.ts",
+            "polyfills": "apps/flolo-page-admin/src/polyfills.ts",
+            "tsConfig": "apps/flolo-page-admin/tsconfig.app.json",
+            "inlineStyleLanguage": "scss",
+            "assets": [
+              "apps/flolo-page-admin/src/favicon.ico",
+              "apps/flolo-page-admin/src/assets"
+            ],
+            "styles": ["apps/flolo-page-admin/src/styles.scss"],
+            "scripts": []
+          },
+          "configurations": {
+            "production": {
+              "budgets": [
+                {
+                  "type": "initial",
+                  "maximumWarning": "500kb",
+                  "maximumError": "1mb"
+                },
+                {
+                  "type": "anyComponentStyle",
+                  "maximumWarning": "2kb",
+                  "maximumError": "4kb"
+                }
+              ],
+              "fileReplacements": [
+                {
+                  "replace": "environments/environment.ts",
+                  "with": "environments/environment.prod.ts"
+                }
+              ],
+              "outputHashing": "all"
+            },
+            "development": {
+              "buildOptimizer": false,
+              "optimization": false,
+              "vendorChunk": true,
+              "extractLicenses": false,
+              "sourceMap": true,
+              "namedChunks": true
+            }
+          },
+          "defaultConfiguration": "production"
+        },
+        "serve": {
+          "builder": "@angular-devkit/build-angular:dev-server",
+          "configurations": {
+            "production": {
+              "browserTarget": "flolo-page-admin:build:production"
+            },
+            "development": {
+              "browserTarget": "flolo-page-admin:build:development"
+            }
+          },
+          "defaultConfiguration": "development"
+        },
+        "extract-i18n": {
+          "builder": "@angular-devkit/build-angular:extract-i18n",
+          "options": {
+            "browserTarget": "flolo-page-admin:build"
+          }
+        },
+        "lint": {
+          "builder": "@nrwl/linter:eslint",
+          "options": {
+            "lintFilePatterns": [
+              "apps/flolo-page-admin/src/**/*.ts",
+              "apps/flolo-page-admin/src/**/*.html"
+            ]
+          }
+        },
+        "test": {
+          "builder": "@nrwl/jest:jest",
+          "outputs": ["coverage/apps/flolo-page-admin"],
+          "options": {
+            "jestConfig": "apps/flolo-page-admin/jest.config.js",
+            "passWithNoTests": true
+          }
+        }
+      }
+    },
+    "flolo-page-admin-e2e": {
+      "root": "apps/flolo-page-admin-e2e",
+      "sourceRoot": "apps/flolo-page-admin-e2e/src",
+      "projectType": "application",
+      "architect": {
+        "e2e": {
+          "builder": "@nrwl/cypress:cypress",
+          "options": {
+            "cypressConfig": "apps/flolo-page-admin-e2e/cypress.json",
+            "tsConfig": "apps/flolo-page-admin-e2e/tsconfig.e2e.json",
+            "devServerTarget": "flolo-page-admin:serve:development"
+          },
+          "configurations": {
+            "production": {
+              "devServerTarget": "flolo-page-admin:serve:production"
+            }
+          }
+        },
+        "lint": {
+          "builder": "@nrwl/linter:eslint",
+          "options": {
+            "lintFilePatterns": ["apps/flolo-page-admin-e2e/**/*.{js,ts}"]
+          }
+        }
+      }
+    },
     "flolo-page-ui": {
       "projectType": "application",
       "root": "apps/flolo-page-ui",
