--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "@fullcalendar/timegrid": "^5.8.0",
     "@nrwl/angular": "12.5.2",
     "animate.css": "^4.1.1",
+    "normalize.css": "^8.0.1",
     "primeflex": "^2.0.0",
     "primeicons": "^4.1.0",
     "primeng": "^12.0.0",
