--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -17,6 +17,8 @@
     "paths": {
       "@dbl-dev/env/*": ["environments/*.ts"],
       "@dbl-dev/events": ["libs/events/src/index.ts"],
+      "@dbl-dev/orders": ["libs/orders/src/index.ts"],
+      "@dbl-dev/products": ["libs/products/src/index.ts"],
       "@dbl-dev/sponsors": ["libs/sponsors/src/index.ts"],
       "@dbl-dev/ui": ["libs/ui/src/index.ts"],
       "@dbl-dev/users": ["libs/users/src/index.ts"]
