--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "primeflex": "^2.0.0",
     "primeicons": "^4.1.0",
     "primeng": "^12.0.0",
+    "quill": "^1.3.7",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.4"
@@ -61,6 +62,7 @@
     "@angular/cli": "^12.0.0",
     "@angular/compiler-cli": "^12.0.0",
     "@angular/language-service": "^12.0.0",
+    "@angular/localize": "^12.1.1",
     "@nrwl/cli": "12.5.2",
     "@nrwl/cypress": "12.5.2",
     "@nrwl/eslint-plugin-nx": "12.5.2",
